# Video_Course_Cards

./: .gitignore  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: audio_extractor.py  auto_card_generation_service.py  card_embedding.py  card_embedding_service.py  card_embedding_store.py  card_embedding_text.py  card_generation_run.py  card_generation_run_store.py  card_relation.py  card_relation_classifier.py  card_relation_service.py  card_relation_store.py  card_service.py  card_similarity.py  course.py  course_service.py  course_store.py  db.py  desktop_server.py  embedding.py  export_service.py  job.py  job_service.py  job_store.py  knowledge_card.py  knowledge_card_note.py  knowledge_card_note_service.py  knowledge_card_note_store.py  knowledge_card_service.py  knowledge_card_store.py  learning_coverage.py  learning_coverage_service.py  learning_document.py  learning_document_service.py  learning_document_store.py  llm_client.py  main.py  markdown_export.py  media_metadata.py  media_probe.py  (+28 more)
backend/experiments/: transcribe_full.py  transcribe_sample.py
backend/multimodal_lab/: README.md  __init__.py  annotation_io.py  ctc_overfit.py  ctc_text.py  evaluate_transition_baseline.py  experiment_protocol.py  experiment_tracking.py  formal_reader_dataset.py  line_crop_audit.py  line_crop_dataset.py  metrics.py  page_reading.py  page_reading_evaluation.py  reader_benchmark_protocol.py  reader_card_cascade.py  reader_card_evaluation.py  reader_comparison.py  reader_config.py  reader_coverage_audit.py  run_ctc_overfit.py  run_evaluate_reader.py  run_formal_reader_dataset.py  run_lecture_split.py  run_line_crop_audit.py  run_line_crop_dataset.py  run_page_reading_comparison.py  run_reader_benchmark_protocol.py  run_reader_card_cascade.py  run_reader_comparison.py  run_reader_coverage_audit.py  run_reader_dataset_audit.py  run_reader_overfit.py  run_train_reader.py  run_transition_baseline.py  run_transition_comparison.py  schemas.py  source_line_alignment.py  transition_baseline.py  validate_annotations.py
backend/rag_lab/: README.md  __init__.py  answering.py  author_benchmark.py  (+17 more)
(+160 files in other folders)
