[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "faster-whisper>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
