[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "faster-whisper>=1.2.1",
    "fsrs>=6.3.1",
    "httpx>=0.28.1",
    "numpy>=2.4.0",
    "onnxruntime>=1.23,<2",
    "pillow>=12,<13",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "rapidocr>=3.9.1,<4",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.12,<3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
