[package]
name = "video-course-cards"
version = "0.1.1"
description = "Local-first AI learning cards for course videos"
authors = ["Video Course Cards"]
edition = "2021"

[lib]
name = "video_course_cards_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
